tests/ui/link-native-libs/issue-109144.stderr
error[E0459]: `#[link]` attribute requires a `name = "string"` argument
  --> $DIR/issue-109144.rs:2:1
   |
LL | #[link(kind = "static", modifiers = "+whole-archive,+bundle")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0459`.
